# ddQuint-App

./: .gitignore  BUILD_MACOS_APP.md  MACOS_APP_ARCHITECTURE.md  MACOS_APP_COMPLETE.md  Overview.md  Parameter_Tooltips_Documentation.md  README.md  README_GUI.md  analysis_architecture.md  build.bat  build.sh  build_app.py  build_fast.sh  bundle_python.sh  bundle_python_fast.sh  code_guide.md  create_app_bundle.py  create_fixed_app.py  ddQuint.sln  ddquint_app.py  ddquint_gui.py  ddquint_standalone.py  debug_params.swift  pyproject.toml  regenerate_single_well.py  setup_app.py  setup_deps.sh  setup_minimal.py  setup_simple.py  test_isolation.sh  test_parameters.swift  test_true_isolation.sh  verify_bundling.sh
Sources/: AnalysisManager.swift.unused  AppDelegate.swift  ExportManager.swift.unused  InteractiveApp.swift  InteractiveApp.swift.backup  ParameterTooltips.swift  TableViewManager.swift  TemplateCreator.swift  UIComponents.swift  WellStatusIndicatorView.swift  main.swift
ddQuint-Native/: Package.swift  build_native_app.sh  build_simple.sh
ddQuint-Native/.build/: build.db  debug.yaml  release.yaml
ddQuint-Native/Sources/: SimpleApp.swift
ddQuint-Native/ddQuint/: AppDelegate.swift  Info.plist  MainWindowController.swift
ddquint/: main.py  regenerate_well.py
ddquint/config/: __init__.py  config.py  config_display.py  exceptions.py  template_generator.py
ddquint/core/: __init__.py  clustering.py  copy_number.py  file_processor.py  list_report.py  plotting.py
ddquint/gui/: __init__.py  macos_native.py
ddquint/pipelines/: non_mixing_4plex.py
ddquint/reporting/: __init__.py  excel_report.py  list_report.py  plate_report.py
ddquint/utils/: __init__.py  ddplt_parser.py  file_io.py  fourplex.py  gui.py  parameter_editor.py  template_creator.py  template_parser.py  well_utils.py
ddquint/visualization/: __init__py  plate_plots.py  well_plots.py
resources/arm64_wheels/: hdbscan-0.8.40-cp312-cp312-win_arm64.whl
scripts/: bundle_python.bat  bundle_python.ps1  bundle_python_engine.ps1  package.bat  package.ps1  package.sh
(+422 files in other folders)
