[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ddquint"
version = "0.1.0"
description = "Droplet Digital PCR Multiplex Analysis for chromosomal copy number detection"
readme = "README.md"
authors = [
    {name = "Jakob Wimmer", email = "globuds133@gmail.com"}
]
requires-python = ">=3.7"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "pandas>=1.0.0",
    "numpy>=1.18.0",
    "matplotlib>=3.3.0",
    "scikit-learn>=0.24.0",
    "hdbscan>=0.8.27",
    "openpyxl>=3.0.5",
    "wxpython>=4.1.0",  # For GUI file selection
    "colorama>=0.4.4",  # For colored terminal output
    "tqdm>=4.60.0",     # For progress bars
    # Platform-specific dependencies for macOS
    "pyobjc-core;platform_system=='Darwin'",
    "pyobjc-framework-Cocoa;platform_system=='Darwin'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0", 
    "black>=20.8b1",
]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/JakobWimmer/ddQuint"
Documentation = "https://github.com/JakobWimmer/ddQuint#readme"
"Bug Tracker" = "https://github.com/JakobWimmer/ddQuint/issues"

[project.scripts]
ddquint = "ddquint.main:main"

[tool.setuptools]
packages = ["ddquint", "ddquint.core", "ddquint.utils", "ddquint.visualization", "ddquint.config"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.black]
line-length = 100
target-version = ["py37", "py38", "py39", "py310"]